test/files/neg/anyval-children.check
anyval-children.scala:3: error: class AnyVal needs to be a trait to be mixed in
@inline class NotOkDingus2 extends Immutable with AnyVal // fail
                                                  ^
anyval-children.scala:7: error: Bippy does not have a constructor
class NotOkBippy1 extends Bippy // fail
                  ^
anyval-children.scala:9: error: illegal inheritance; superclass Bippy
 is not a subclass of the superclass Object
 of the mixin trait Immutable
class NotOkBippy2 extends Bippy with Immutable //fail
                                     ^
anyval-children.scala:9: error: Bippy does not have a constructor
class NotOkBippy2 extends Bippy with Immutable //fail
                  ^
anyval-children.scala:11: error: illegal inheritance; superclass Bippy
 is not a subclass of the superclass Object
 of the mixin trait Immutable
@inline class NotOkBippy3 extends Bippy with Immutable //fail
                                             ^
anyval-children.scala:11: error: Bippy does not have a constructor
@inline class NotOkBippy3 extends Bippy with Immutable //fail
                          ^
6 errors found
